src/main/metadata/objects/SMS_Result__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMS Results</relationshipLabel>
        <relationshipName>SMS_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <label>CampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <label>EID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISOCountryCode__c</fullName>
        <label>ISOCountryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH',
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY',
IF(ISPICKVAL($User.Market__c, 'NZ'), 'NZ',
IF(ISPICKVAL($User.Market__c, 'IN'), 'IN',
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR','NA'))))))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageName__c</fullName>
        <label>MessageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageText__c</fullName>
        <label>MessageText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <label>MessageType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileNumber__c</fullName>
        <label>MobileNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortCode__c</fullName>
        <label>ShortCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SMS Result</label>
    <nameField>
        <label>SMS Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>